292 ==> 384426 - core/libs/dngwriter/extra/dng_sdk/dng_date_time.cpp: int / long mixup.
293 ==> 384423 - core/libs/dngwriter/extra/dng_sdk/dng_string.cpp:2027: confused logic ?
294 ==> 384422 - core/libs/dngwriter/extra/dng_sdk/dng_mosaic_info.cpp:637: bad if ?
295 ==> 231038 - digiKam crashed while attempting to import photo collection (100GB) CR2 DNG JPG.
296 ==> 192545 - FTBFS on mips.
297 ==> 418645 - DNG files created with Adobe DNG Converter from Fuji S3 RAW files appear purple - Update to DNG SDK 1.5.
298 ==> 370631 - Converting Sony STL-A58 ARW to DNG fails - Update to DNG SDK 1.5.
299 ==> 330920 - Previews and thumbnails of DNG converted from Canon EOS350D CR2 have incorrect red colors - Update to DNG SDK 1.5.
300 ==> 429119 - Convert RAW Nikon NEF to DNG tool adds text to caption field.
301 ==> 427350 - digiKam DNG Converter fails to correctly encode white balance or camera metadata for Canon R5 CR3.
302 ==> 284934 - Allow to embed multiple JPEG in DNG Converter.
303 ==> 436913 - File name timestamp not valid year 1892.
304 ==> 381967 - Some lens metadata lost in converting CR2 into DNG.
305 ==> 436946 - Settings not permanent.
306 ==> 436977 - Field "Options" too small.
307 ==> 436979 - Empty regions.
308 ==> 435085 - Some DNG files created with Adobe DNG Converter cause program to abort - Update to DNG SDK 1.5.
309 ==> 437038 - Unmark this face as Ignored - pressing will cause the ignored picture frame to disappear.
310 ==> 436795 - Database from uninstalled version of digiKam is unhelpfully persistant.
311 ==> 424679 - Windows installer erroneously requires accepting the GPL.
312 ==> 436532 - digiKam translation of "Behavior" not possible.
313 ==> 403267 - digiKam is not reading tags from DNG images when sidecars are present.
314 ==> 437072 - digiKam does not start.
315 ==> 426791 - Unable to change database location via GUI.
316 ==> 437175 - Use media file timestamp when creating sidecar.
317 ==> 